restored parent and plugin plugin to working setup