@@ -15,7 +15,7 @@
   <parent>
     <groupId>com.simpligility.maven</groupId>
     <artifactId>progressive-organization-pom</artifactId>
-    <version>2.3.0</version>
+    <version>2.1.1</version>
   </parent>
 
   <groupId>com.simpligility.maven.plugins</groupId>
@@ -33,7 +33,7 @@
     <scm.branch>master</scm.branch>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <maven-plugin-plugin.version>3.3</maven-plugin-plugin.version>
+    <maven-plugin-plugin.version>3.2</maven-plugin-plugin.version>
     <maven.api.version>3.0.4</maven.api.version>
 
     <easymock.version>3.2</easymock.version>
@@ -678,6 +678,7 @@
             <packaging>takari-maven-plugin</packaging>
           </packagingTypes>
            -->
+           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
           <execution>
@@ -879,6 +880,10 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
+           <!--  <configuration>
+             <argline>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+            </configuration>
+             -->
             <executions>
               <execution>
                 <goals>
